# rraytracing

./: Cargo.toml  LICENSE  README.md  shell.nix
.github/workflows/: rust.yml
gui/: Cargo.toml
gui/src/: main.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  main.rs  shapes.rs  util.rs
renderer/src/materials/: dielectric.rs  interactions.rs  lambertian.rs  material.rs  metal.rs  scatter_record.rs
renderer/src/math/: random.rs  vec3.rs
renderer/src/renderer/: renderer.rs
renderer/src/scene/: camera.rs  scene.rs
renderer/src/shapes/: hit_collection.rs  hit_record.rs  sphere.rs
renderer/src/util/: color.rs  point.rs  ray.rs
shared/src/: data.rs  traits.rs
src/: main.rs  materials.rs  shapes.rs
src/materials/: dielectric.rs  interactions.rs  lambertian.rs  metal.rs
src/math/: random.rs  vec3.rs
src/scene/: camera.rs
src/shapes/: hit_collection.rs  hit_record.rs  sphere.rs  traits.rs
src/util/: color.rs  ray.rs
tests/: vec3_tests.rs
