[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
relm4 = "0.5.1"
relm4-components = "0.5.1"
renderer = { version = "0.1.0", path = "../renderer" }
shared = { version = "0.1.0", path = "../shared" }
tokio = { version = "1.27.0", features = ["time"] }
